--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.1.0
+  intl: ^0.18.1
+  flutter_spinkit: ^5.2.0
+  
 
 
   # The following adds the Cupertino Icons font to your application.
